<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_perfil"
        android:title="@string/menu_perfil"
        android:icon="@drawable/perfil"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_bitacora"
        android:title="@string/menu_bitacoras"
        android:icon="@drawable/bitacora"/>
    <item
        android:id="@+id/nav_anticipos"
        android:title="@string/menu_anticipos"
        android:icon="@drawable/anticipos"/>
    <item
        android:id="@+id/nav_liquidacion"
        android:title="@string/menu_liquidacion"
        android:icon="@drawable/liquidacion"/>
    <item
        android:id="@+id/nav_administrador"
        android:title="@string/menu_admin"
        android:icon="@drawable/ic_truck"/>
    <item
        android:id="@+id/nav_supervisor"
        android:title="@string/menu_supervisor"
        android:icon="@drawable/trabajador"/>
    <item
        android:id="@+id/nav_rechazo"
        android:title="@string/menu_rechazo"
        android:icon="@drawable/ic_rechazo"
        />
    <item
        android:id="@+id/nav_viajesop"
        android:title="@string/menu_viajesop"
        android:icon="@drawable/ic_truck"
        />
    <item
        android:id="@+id/nav_Liquidaciones"
        android:title="@string/menu_liquidacionop"
        android:icon="@drawable/liquidacion"
        />
    <item
        android:id="@+id/nav_estadisticas"
        android:title="@string/menu_estadistacas"
        android:icon="@drawable/ic_estadistica"
        />
</menu>